@startuml

title __CHAINOFRESPONSIBILITY's Class Diagram__\n

  namespace com.arijeet.design.pattern.chainofresponsibility {
    class com.arijeet.design.pattern.chainofresponsibility.Client {
        {static} + main()
        {static} - createChain()
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    class com.arijeet.design.pattern.chainofresponsibility.Director {
        + Director()
        # processRequest()
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    abstract class com.arijeet.design.pattern.chainofresponsibility.Employee {
        - role : String
        + Employee()
        + getApproverRole()
        + processLeaveApplication()
        {abstract} # processRequest()
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    class com.arijeet.design.pattern.chainofresponsibility.LeaveApplication {
        - from : LocalDate
        - processedBy : String
        - to : LocalDate
        + LeaveApplication()
        + approve()
        + getFrom()
        + getNoOfDays()
        + getProcessedBy()
        + getStatus()
        + getTo()
        + getType()
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    enum Status {
      Approved
      Pending
      Rejected
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    enum Type {
      LOP
      PTO
      Sick
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    interface com.arijeet.design.pattern.chainofresponsibility.LeaveApprover {
        {abstract} + getApproverRole()
        {abstract} + processLeaveApplication()
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    class com.arijeet.design.pattern.chainofresponsibility.ProjectLead {
        + ProjectLead()
        # processRequest()
    }
  }
  

  namespace com.arijeet.design.pattern.chainofresponsibility {
    class com.arijeet.design.pattern.chainofresponsibility.ProjectManager {
        + ProjectManager()
        # processRequest()
    }
  }
  

  com.arijeet.design.pattern.chainofresponsibility.Director -up-|> com.arijeet.design.pattern.chainofresponsibility.Employee
  com.arijeet.design.pattern.chainofresponsibility.Employee .up.|> com.arijeet.design.pattern.chainofresponsibility.LeaveApprover
  com.arijeet.design.pattern.chainofresponsibility.Employee o-- com.arijeet.design.pattern.chainofresponsibility.LeaveApprover : successor
  com.arijeet.design.pattern.chainofresponsibility.LeaveApplication o-- com.arijeet.design.pattern.chainofresponsibility.LeaveApplication.Status : status
  com.arijeet.design.pattern.chainofresponsibility.LeaveApplication o-- com.arijeet.design.pattern.chainofresponsibility.LeaveApplication.Type : type
  com.arijeet.design.pattern.chainofresponsibility.LeaveApplication +-down- com.arijeet.design.pattern.chainofresponsibility.LeaveApplication.Status
  com.arijeet.design.pattern.chainofresponsibility.LeaveApplication +-down- com.arijeet.design.pattern.chainofresponsibility.LeaveApplication.Type
  com.arijeet.design.pattern.chainofresponsibility.ProjectLead -up-|> com.arijeet.design.pattern.chainofresponsibility.Employee
  com.arijeet.design.pattern.chainofresponsibility.ProjectManager -up-|> com.arijeet.design.pattern.chainofresponsibility.Employee


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
